YAMLs/DEV/Ingress/aks-bkend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aks-bkend-ingress
  namespace: aks-bkend-dev
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1    
    nginx.ingress.kubernetes.io/enable-cors: "true"       
spec:
  # tls:
  # - hosts:
  #   - "*.wkshpdev.com"
  #   secretName: aks-bkend-tls-secret
  rules:   
  - host: bkdev.wkshpdev.com
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: api-bkend-svc
          servicePort: 80
